JohnL is John Locke


Changelog for 1.4 Series
Released 2014-09-15


Changelog for 1.4.41
* Fix 'Bad interval' error with PNL comparisons (Erik H, #2146)
* Refactor filter pages for income statement and balance sheet (Erik H)
* Follow-up to earlier compensation for '.' missing from @INC (Erik H, #2275)
* Fix reversal of payments against non-eca-default AR/AP account (Erik H, #2558)

Erik H is Erik Huelsmann


Changelog for 1.4.40
* Fix name of the sequence being updated in the 1.3 migration script (Erik H)

Erik H is Erik Huelsmann


Changelog for 1.4.39
* Fixed searching for approved batches (Chris T, #2592)
* Don't cache per-company (from database) templates (Erik H, #2573)
* Don't block database administrator access to Contacts (Erik H)
* Compensate for the removal of '.' from @INC on newer Perl versions (Erik H)
* Fix payments sometimes double-counted in Cash>Reports>Receipts (Erik H, #2618)
* Remove reference to removed JS files, silencing logs (Chris T)
* Fix bug reading templates directory (only seen on CentOS) (Chris T)
* Fix attachments showing up twice after 1.3->1.4 migration (Erik H, #2659)

Chris T is Chris Travers
Erik H is Erik Huelsmann


Changelog for 1.4.38
* Printed credit invoice indistinguishible from regular invoice (Erik H, #2546)
* Credit invoice edit screen looks like regular invoice screen (Erik H, #2550)
* Failure to generate AR/AP aging report (Erik H, #2545)
* Fix misnamed function in call (Chris T)
* Invoice template: 'Paid' row shows even without payments (Erik H, #2569)
* Invoice template: 'Payments' section always printed (Erik H, #2568)

Chris T is Chris Travers
Erik H is Erik Huelsmann


Changelog for 1.4.37
* Outstanding report (AR/AP) not showing Due amount (Erik H, #2351)
* Outstanding report (AR/AP) does not include taxes (Erik H, #2437)
* Contact screen does not honor Default Country from Defaults (Erik H, #2349)
* UI switches language after "Post Batch" (Erik H, #1640)
* Incorrect address on Aging statement (Erik H, #1245)